[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.5"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"